--- a/main.tex
+++ b/main.tex
@@ -196,7 +196,7 @@ The final sample comprised 81 stars for which we had complete data for $\teff$, 
 
 \begin{table*}
 	\centering
-	\caption{The observables and their respective uncertainties for 10 stars in the sample of 81 stars. The whole table is available as supplementary material.}
+	\caption{The observables and their respective uncertainties for 5 stars in the sample of 81 stars. The whole table is available as supplementary material.}
 	\label{tab:data}
 	\input{tables/stars_inputs.tex}
 \end{table*}
@@ -872,7 +872,7 @@ In Figure \ref{fig:shrinkage} we also see a similar reduction in uncertainty for
 \begin{figure*}
     \centering
     \includegraphics[width=\textwidth]{figures/shrinkage.png}
-    \caption{Kernal density estimates (KDEs) of the distributions of statistical uncertainties from each model for the sample of synthetic stars. The PP model was run with 10, 50 and 100 stars and is denoted PP10, PP50, and PP100 respectively. The NP and MP models were both run with the full set of 100 stars.}
+    \caption{Kernel density estimates (KDEs) of the distributions of statistical uncertainties from each model for the sample of synthetic stars. The PP model was run with 10, 50 and 100 stars and is denoted PP10, PP50, and PP100 respectively. The NP and MP models were both run with the full set of 100 stars.}
     \label{fig:shrinkage}
 \end{figure*}
 
