Format tables to be like publication

--- a/tables/hyperparam_results.tex
+++ b/tables/hyperparam_results.tex
@@ -1,6 +1,6 @@
-\begin{tabular}{cccccc}
+\begin{tabular}{lccccc}
 \toprule
-\textbf{Model} &              $\Delta Y/\Delta Z$ &                             $\sigma_Y$ &                        $\mu_\alpha$ &                     $\sigma_\alpha$ &               $\alpha_\mathrm{mlt}$ \\
+Model &              $\Delta Y/\Delta Z$ &                             $\sigma_Y$ &                        $\mu_\alpha$ &                     $\sigma_\alpha$ &               $\alpha_\mathrm{mlt}$ \\
 \midrule
             NP &  $1.69\substack{+0.21 \\ -0.21}$ &  $0.0074\substack{+0.0026 \\ -0.0022}$ &  $1.954\substack{+0.040 \\ -0.041}$ &  $0.065\substack{+0.030 \\ -0.024}$ &                                 --- \\
             PP &  $1.60\substack{+0.45 \\ -0.42}$ &  $0.0051\substack{+0.0045 \\ -0.0027}$ &  $1.742\substack{+0.081 \\ -0.070}$ &  $0.056\substack{+0.051 \\ -0.030}$ &                                 --- \\
