--- a/tables/stars_inputs.tex
+++ b/tables/stars_inputs.tex
@@ -1,6 +1,6 @@
-\begin{tabular}{ccccc}
+\begin{tabular}{lcccc}
 \toprule
-\textbf{Name} & $\teff\,(\si{\kelvin})$ & $L\,(\si{\solarluminosity})$ & $\dnu\,(\si{\micro\hertz})$ & $\metallicity_\mathrm{surf}\,(\si{\dex})$ \\
+Name & $\teff\,(\si{\kelvin})$ & $L\,(\si{\solarluminosity})$ & $\dnu\,(\si{\micro\hertz})$ & $\metallicity_\mathrm{surf}\,(\si{\dex})$ \\
 \midrule
   KIC10079226 &            $5929\pm125$ &              $1.571\pm0.049$ &             $116.04\pm0.73$ &                           $0.159\pm0.074$ \\
   KIC10215584 &            $5667\pm119$ &              $1.637\pm0.063$ &             $115.16\pm2.83$ &                           $0.043\pm0.069$ \\
