--- a/tables/stars_outputs_MPS.tex
+++ b/tables/stars_outputs_MPS.tex
@@ -1,6 +1,6 @@
-\begin{tabular}{crrrrrrrrr}
+\begin{tabular}{lccccccccc}
 \toprule
-\textbf{Name} &                $f_\mathrm{evol}$ &           $M\,(\si{\solarmass})$ &                $Y_\mathrm{init}$ &                   $Z_\mathrm{init}$ &      $\tau\,(\si{\giga\year})$ &      $\teff\,(\si{\kelvin})$ &         $R\,(\si{\solarradius})$ &     $\dnu\,(\si{\micro\hertz})$ & $\metallicity_\mathrm{surf}\,(\si{\dex})$ \\
+Name &                $f_\mathrm{evol}$ &           $M\,(\si{\solarmass})$ &                $Y_\mathrm{init}$ &                   $Z_\mathrm{init}$ &      $\tau\,(\si{\giga\year})$ &      $\teff\,(\si{\kelvin})$ &         $R\,(\si{\solarradius})$ &     $\dnu\,(\si{\micro\hertz})$ & $\metallicity_\mathrm{surf}\,(\si{\dex})$ \\
 \midrule
   KIC10079226 &  $0.44\substack{+0.07 \\ -0.06}$ &  $1.16\substack{+0.02 \\ -0.03}$ &  $0.26\substack{+0.01 \\ -0.01}$ &  $0.021\substack{+0.003 \\ -0.002}$ &   $2.7\substack{+0.5 \\ -0.4}$ &  $5965\substack{+40 \\ -40}$ &  $1.17\substack{+0.01 \\ -0.01}$ &  $116.0\substack{+0.7 \\ -0.7}$ &           $0.15\substack{+0.06 \\ -0.06}$ \\
   KIC10215584 &  $0.59\substack{+0.11 \\ -0.13}$ &  $1.13\substack{+0.03 \\ -0.03}$ &  $0.26\substack{+0.01 \\ -0.01}$ &  $0.018\substack{+0.002 \\ -0.002}$ &   $3.6\substack{+0.9 \\ -0.9}$ &  $5952\substack{+55 \\ -56}$ &  $1.18\substack{+0.02 \\ -0.02}$ &  $112.7\substack{+2.7 \\ -2.7}$ &           $0.08\substack{+0.06 \\ -0.07}$ \\
