--- a/tables/sun_inputs.tex
+++ b/tables/sun_inputs.tex
@@ -1,6 +1,6 @@
-\begin{tabular}{ccl}
+\begin{tabular}{lcc}
 \toprule
-                            \textbf{Input} &            Value &                         Reference \\
+                            Input &            Value &                         Reference \\
 \midrule
                     $M\,(\si{\solarmass})$ &  $1.000\pm0.001$ &                               --- \\
                  $\tau\,(\si{\giga\year})$ &      $4.6\pm0.1$ &  \citet{Connelly.Bizzarro.ea2012} \\
