--- a/tables/sun_outputs.tex
+++ b/tables/sun_outputs.tex
@@ -1,4 +1,4 @@
-\begin{tabular}{clllllllll}
+\begin{tabular}{lccccccccc}
 \toprule
                   $f_\mathrm{evol}$ &              $M\,(\si{\solarmass})$ &                           $\mlt$ &                   $Y_\mathrm{init}$ &                      $Z_\mathrm{init}$ &     $\tau\,(\si{\giga\year})$ &      $\teff\,(\si{\kelvin})$ &            $R\,(\si{\solarradius})$ &        $\dnu\,(\si{\micro\hertz})$ & $\metallicity_\mathrm{surf}\,(\si{\dex})$ \\
 \midrule
