--- a/main.tex
+++ b/main.tex
@@ -47,7 +47,7 @@
     range-units=single,
     separate-uncertainty=true,
     multi-part-units=single,
-    group-separator={,}
+    group-separator={\,}
     ]{siunitx}           % Consistent formating of SI units and numbers
 
 \usepackage{float}       % Improved floats
@@ -69,7 +69,7 @@
 \newcommand{\teff}{\ensuremath{T_\mathrm{eff}}}
 \newcommand{\mlt}{\ensuremath{{\alpha_\mathrm{MLT}}}}
 
-\renewcommand{\arraystretch}{1.2}  % So row spacing in tables is big enough for math
+% \renewcommand{\arraystretch}{1.2}  % So row spacing in tables is big enough for math
 
 % Custom SI units (siunix package)
 \DeclareSIUnit\year{yr}
@@ -232,14 +232,12 @@ We also computed an additional set of evolutionary tracks, with input values cho
 	\begin{tabular}{cccc} % four columns, alignment for each
 		\toprule
 		\multicolumn{4}{c}{\textbf{Stellar model grid}}\\
-		\midrule
 		Input Parameter & Range & Increment & $N_{\rm track}$\\
         \midrule
 	$M$ ($M_{\odot}$)  & 0.80 -- 1.20 &  0.01& \num{41}\\
         $\rm{[M/H]}_\mathrm{init}$ (dex) & -0.5 -- 0.2/0.25 -- 0.5 & 0.1/0.05 & \num{14}\\
         	$Y_{\rm init}$ & 0.24 -- 0.32 & 0.02 & \num{5}\\
-        $\alpha_{\rm{mlt}}$  & 1.5 -- 2.5&  0.2 & \num{6}\\
-        \midrule
+        $\alpha_{\rm{mlt}}$  & 1.5 -- 2.5&  0.2 & \num{6} \vspace{0.5em}\\
         \textbf{Total} & & & \num{17220}\\
         \bottomrule
     \end{tabular}
