--- a/tables/standardisation.tex
+++ b/tables/standardisation.tex
@@ -1,6 +1,6 @@
-\begin{tabular}{c|ccccc|ccccc}
+\begin{tabular}{lcccccccccc}
 \toprule
-{} & \multicolumn{5}{c|}{\textbf{Input}} & \multicolumn{5}{c}{\textbf{Output}} \\
+{} & \multicolumn{5}{c}{Input} & \multicolumn{5}{c}{Output} \\
 {} & $f_\mathrm{evol}$ & $M\,(\si{\solarmass})$ & $\mlt$ & $Y_\mathrm{init}$ & $Z_\mathrm{init}$ & $\log(\tau/\si{\giga\year})$ & $\teff\,(\si{\kelvin})$ & $R\,(\si{\solarradius})$ & $\dnu\,(\si{\micro\hertz})$ & $\metallicity_\mathrm{surf}\,(\si{\dex})$ \\
 \midrule
 $\mu_{1/2}$ &             0.865 &                  1.000 &  1.900 &             0.280 &             0.017 &                        0.790 &                5566.772 &                    1.224 &                     100.720 &                                     0.081 \\
