--- a/tables/stars_outputs_MP.tex
+++ b/tables/stars_outputs_MP.tex
@@ -1,6 +1,6 @@
-\begin{tabular}{crrrrrrrrr}
+\begin{tabular}{lccccccccc}
 \toprule
-\textbf{Name} &                $f_\mathrm{evol}$ &           $M\,(\si{\solarmass})$ &                $Y_\mathrm{init}$ &                   $Z_\mathrm{init}$ &     $\tau\,(\si{\giga\year})$ &      $\teff\,(\si{\kelvin})$ &         $R\,(\si{\solarradius})$ &     $\dnu\,(\si{\micro\hertz})$ & $\metallicity_\mathrm{surf}\,(\si{\dex})$ \\
+Name &                $f_\mathrm{evol}$ &           $M\,(\si{\solarmass})$ &                $Y_\mathrm{init}$ &                   $Z_\mathrm{init}$ &     $\tau\,(\si{\giga\year})$ &      $\teff\,(\si{\kelvin})$ &         $R\,(\si{\solarradius})$ &     $\dnu\,(\si{\micro\hertz})$ & $\metallicity_\mathrm{surf}\,(\si{\dex})$ \\
 \midrule
   KIC10079226 &  $0.20\substack{+0.08 \\ -0.08}$ &  $1.17\substack{+0.02 \\ -0.03}$ &  $0.28\substack{+0.01 \\ -0.01}$ &  $0.019\substack{+0.003 \\ -0.002}$ &  $1.1\substack{+0.5 \\ -0.4}$ &  $5961\substack{+42 \\ -41}$ &  $1.17\substack{+0.01 \\ -0.01}$ &  $115.9\substack{+0.7 \\ -0.7}$ &           $0.15\substack{+0.06 \\ -0.07}$ \\
   KIC10215584 &  $0.36\substack{+0.14 \\ -0.13}$ &  $1.14\substack{+0.03 \\ -0.03}$ &  $0.27\substack{+0.01 \\ -0.01}$ &  $0.018\substack{+0.002 \\ -0.002}$ &  $2.0\substack{+0.9 \\ -0.8}$ &  $5941\substack{+57 \\ -57}$ &  $1.18\substack{+0.02 \\ -0.02}$ &  $112.5\substack{+2.6 \\ -2.7}$ &           $0.07\substack{+0.06 \\ -0.07}$ \\
