--- a/tables/stars_outputs_NP.tex
+++ b/tables/stars_outputs_NP.tex
@@ -1,6 +1,6 @@
-\begin{tabular}{crrrrrrrrrr}
+\begin{tabular}{lcccccccccc}
 \toprule
-\textbf{Name} &                $f_\mathrm{evol}$ &           $M\,(\si{\solarmass})$ &                           $\mlt$ &                $Y_\mathrm{init}$ &                   $Z_\mathrm{init}$ &     $\tau\,(\si{\giga\year})$ &      $\teff\,(\si{\kelvin})$ &         $R\,(\si{\solarradius})$ &     $\dnu\,(\si{\micro\hertz})$ & $\metallicity_\mathrm{surf}\,(\si{\dex})$ \\
+Name &                $f_\mathrm{evol}$ &           $M\,(\si{\solarmass})$ &                           $\mlt$ &                $Y_\mathrm{init}$ &                   $Z_\mathrm{init}$ &     $\tau\,(\si{\giga\year})$ &      $\teff\,(\si{\kelvin})$ &         $R\,(\si{\solarradius})$ &     $\dnu\,(\si{\micro\hertz})$ & $\metallicity_\mathrm{surf}\,(\si{\dex})$ \\
 \midrule
   KIC10079226 &  $0.44\substack{+0.16 \\ -0.20}$ &  $1.14\substack{+0.04 \\ -0.04}$ &  $2.07\substack{+0.26 \\ -0.30}$ &  $0.28\substack{+0.02 \\ -0.02}$ &  $0.021\substack{+0.003 \\ -0.003}$ &  $2.5\substack{+1.2 \\ -1.3}$ &  $5990\substack{+51 \\ -52}$ &  $1.16\substack{+0.01 \\ -0.02}$ &  $116.0\substack{+0.7 \\ -0.7}$ &           $0.16\substack{+0.07 \\ -0.07}$ \\
   KIC10215584 &  $0.50\substack{+0.21 \\ -0.21}$ &  $1.13\substack{+0.04 \\ -0.05}$ &  $1.92\substack{+0.33 \\ -0.26}$ &  $0.27\substack{+0.02 \\ -0.02}$ &  $0.018\substack{+0.002 \\ -0.002}$ &  $2.9\substack{+1.6 \\ -1.3}$ &  $5949\substack{+64 \\ -65}$ &  $1.18\substack{+0.02 \\ -0.02}$ &  $112.5\substack{+2.6 \\ -2.6}$ &           $0.08\substack{+0.06 \\ -0.06}$ \\
