--- a/tables/stars_outputs_PP.tex
+++ b/tables/stars_outputs_PP.tex
@@ -1,6 +1,6 @@
-\begin{tabular}{crrrrrrrrrr}
+\begin{tabular}{lcccccccccc}
 \toprule
-\textbf{Name} &                $f_\mathrm{evol}$ &           $M\,(\si{\solarmass})$ &                           $\mlt$ &                $Y_\mathrm{init}$ &                   $Z_\mathrm{init}$ &     $\tau\,(\si{\giga\year})$ &      $\teff\,(\si{\kelvin})$ &         $R\,(\si{\solarradius})$ &     $\dnu\,(\si{\micro\hertz})$ & $\metallicity_\mathrm{surf}\,(\si{\dex})$ \\
+Name &                $f_\mathrm{evol}$ &           $M\,(\si{\solarmass})$ &                           $\mlt$ &                $Y_\mathrm{init}$ &                   $Z_\mathrm{init}$ &     $\tau\,(\si{\giga\year})$ &      $\teff\,(\si{\kelvin})$ &         $R\,(\si{\solarradius})$ &     $\dnu\,(\si{\micro\hertz})$ & $\metallicity_\mathrm{surf}\,(\si{\dex})$ \\
 \midrule
   KIC10079226 &  $0.22\substack{+0.10 \\ -0.09}$ &  $1.16\substack{+0.02 \\ -0.03}$ &  $1.75\substack{+0.11 \\ -0.09}$ &  $0.28\substack{+0.01 \\ -0.01}$ &  $0.020\substack{+0.003 \\ -0.002}$ &  $1.2\substack{+0.6 \\ -0.5}$ &  $5962\substack{+44 \\ -42}$ &  $1.17\substack{+0.01 \\ -0.01}$ &  $115.9\substack{+0.7 \\ -0.7}$ &           $0.15\substack{+0.07 \\ -0.07}$ \\
   KIC10215584 &  $0.37\substack{+0.15 \\ -0.13}$ &  $1.14\substack{+0.03 \\ -0.03}$ &  $1.74\substack{+0.10 \\ -0.09}$ &  $0.27\substack{+0.01 \\ -0.01}$ &  $0.018\substack{+0.002 \\ -0.002}$ &  $2.1\substack{+1.0 \\ -0.8}$ &  $5941\substack{+57 \\ -56}$ &  $1.18\substack{+0.02 \\ -0.02}$ &  $112.5\substack{+2.6 \\ -2.7}$ &           $0.07\substack{+0.07 \\ -0.07}$ \\
