--- a/tables/stars_outputs_PPS.tex
+++ b/tables/stars_outputs_PPS.tex
@@ -1,6 +1,6 @@
-\begin{tabular}{crrrrrrrrrr}
+\begin{tabular}{lccccccccccc}
 \toprule
-\textbf{Name} &                $f_\mathrm{evol}$ &           $M\,(\si{\solarmass})$ &                           $\mlt$ &                $Y_\mathrm{init}$ &                   $Z_\mathrm{init}$ &     $\tau\,(\si{\giga\year})$ &      $\teff\,(\si{\kelvin})$ &         $R\,(\si{\solarradius})$ &     $\dnu\,(\si{\micro\hertz})$ & $\metallicity_\mathrm{surf}\,(\si{\dex})$ \\
+Name &                $f_\mathrm{evol}$ &           $M\,(\si{\solarmass})$ &                           $\mlt$ &                $Y_\mathrm{init}$ &                   $Z_\mathrm{init}$ &     $\tau\,(\si{\giga\year})$ &      $\teff\,(\si{\kelvin})$ &         $R\,(\si{\solarradius})$ &     $\dnu\,(\si{\micro\hertz})$ & $\metallicity_\mathrm{surf}\,(\si{\dex})$ \\
 \midrule
   KIC10079226 &  $0.35\substack{+0.11 \\ -0.12}$ &  $1.17\substack{+0.02 \\ -0.03}$ &  $1.95\substack{+0.14 \\ -0.15}$ &  $0.27\substack{+0.01 \\ -0.01}$ &  $0.020\substack{+0.003 \\ -0.002}$ &  $2.1\substack{+0.8 \\ -0.8}$ &  $5962\substack{+44 \\ -43}$ &  $1.17\substack{+0.01 \\ -0.01}$ &  $116.0\substack{+0.7 \\ -0.7}$ &           $0.15\substack{+0.06 \\ -0.07}$ \\
   KIC10215584 &  $0.47\substack{+0.16 \\ -0.16}$ &  $1.14\substack{+0.03 \\ -0.03}$ &  $1.90\substack{+0.15 \\ -0.17}$ &  $0.27\substack{+0.01 \\ -0.01}$ &  $0.018\substack{+0.002 \\ -0.002}$ &  $2.7\substack{+1.2 \\ -1.1}$ &  $5943\substack{+56 \\ -58}$ &  $1.18\substack{+0.02 \\ -0.02}$ &  $112.6\substack{+2.6 \\ -2.6}$ &           $0.07\substack{+0.06 \\ -0.07}$ \\
